// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography ACT theme matches the snapshot 1`] = `
<div>
  <h1
    class="MuiTypography-root MuiTypography-h1 css-1ccl0zc-MuiTypography-root"
  >
    Heading Title
  </h1>
</div>
`;

exports[`Typography ACT_ET theme matches the snapshot 1`] = `
<div>
  <h1
    class="MuiTypography-root MuiTypography-h1 css-ew6b5l-MuiTypography-root"
  >
    Heading Title
  </h1>
</div>
`;

exports[`Typography ENCOURA theme matches the snapshot 1`] = `
<div>
  <h1
    class="MuiTypography-root MuiTypography-h1 css-101c2ee-MuiTypography-root"
  >
    Heading Title
  </h1>
</div>
`;

exports[`Typography ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <h1
    class="MuiTypography-root MuiTypography-h1 css-101c2ee-MuiTypography-root"
  >
    Heading Title
  </h1>
</div>
`;

exports[`Typography ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <h1
    class="MuiTypography-root MuiTypography-h1 css-1oz906d-MuiTypography-root"
  >
    Heading Title
  </h1>
</div>
`;
